<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of pets -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Field for item name -->
            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#2B3D4D"
                tools:text="Item Name"
                android:paddingBottom="4dp"/>

            <!-- Field for item quantity -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="4dp">

                <!-- Label -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:text="@string/catalog_quantity"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorCatalogLabel" />

                <!-- Item Quantity Field -->
                <TextView
                    android:id="@+id/item_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="5dp"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorCatalogLabel"
                    tools:text="Item Quantity" />
            </LinearLayout>

            <!-- Field for item supplier name -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:text="@string/catalog_price"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorCatalogLabel" />

                <!-- Item Supplier Field -->
                <TextView
                    android:id="@+id/item_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="5dp"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorCatalogLabel"
                    tools:text="Price" />
            </LinearLayout>

        </LinearLayout>


        <!-- Field for item date of addition -->
        <LinearLayout
            android:id="@+id/item_date_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:paddingBottom="4dp">

            <!-- Label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/catalog_date"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorCatalogLabel" />

            <!-- Item Date Field -->
            <TextView
                android:id="@+id/item_date_added"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="5dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorCatalogLabel"
                tools:text="Item Date" />
        </LinearLayout>

        <!-- Button field to sell item -->
        <Button
            android:id="@+id/item_sell_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:fontFamily="sans-serif-medium"
            android:layout_below="@id/item_date_field"
            android:foreground="?selectableItemBackgroundBorderless"
            android:text="@string/catalog_sell_item_button"/>

    </RelativeLayout>

</LinearLayout>